// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput create component 1`] = `
<NumberInput
  dataFormat={[Function]}
  defaultValue=""
  max={9007199254740991}
  min={-9007199254740991}
  step={1}
>
  <Input
    append={
      <span
        className="el-number-input-handler"
      >
        <span
          className="fa fa-angle-up el-number-input-up"
          onClick={[Function]}
        />
        <span
          className="fa fa-angle-down el-number-input-down"
          onClick={[Function]}
        />
      </span>
    }
    className="el-number-input"
    max={9007199254740991}
    min={-9007199254740991}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  >
    <div
      className="el-input-wrapper el-number-input"
    >
      <div
        className="el-input el-number-input"
      >
        <input
          max={9007199254740991}
          min={-9007199254740991}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <span
        className="el-input-append"
      >
        <span
          className="el-number-input-handler"
        >
          <span
            className="fa fa-angle-up el-number-input-up"
            onClick={[Function]}
          />
          <span
            className="fa fa-angle-down el-number-input-down"
            onClick={[Function]}
          />
        </span>
      </span>
    </div>
  </Input>
</NumberInput>
`;

exports[`NumberInput define disabled 1`] = `
<NumberInput
  dataFormat={[Function]}
  defaultValue=""
  disabled={true}
  max={9007199254740991}
  min={-9007199254740991}
  step={1}
>
  <Input
    append={
      <span
        className="el-number-input-handler"
      >
        <span
          className="fa fa-angle-up el-number-input-up"
          onClick={[Function]}
        />
        <span
          className="fa fa-angle-down el-number-input-down"
          onClick={[Function]}
        />
      </span>
    }
    className="el-number-input el-number-input-disabled"
    disabled={true}
    max={9007199254740991}
    min={-9007199254740991}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  >
    <div
      className="el-input-wrapper el-number-input el-number-input-disabled"
    >
      <div
        className="el-input el-number-input el-number-input-disabled"
      >
        <input
          disabled={true}
          max={9007199254740991}
          min={-9007199254740991}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <span
        className="el-input-append"
      >
        <span
          className="el-number-input-handler"
        >
          <span
            className="fa fa-angle-up el-number-input-up"
            onClick={[Function]}
          />
          <span
            className="fa fa-angle-down el-number-input-down"
            onClick={[Function]}
          />
        </span>
      </span>
    </div>
  </Input>
</NumberInput>
`;

exports[`NumberInput define size[large] 1`] = `
<NumberInput
  dataFormat={[Function]}
  defaultValue=""
  max={9007199254740991}
  min={-9007199254740991}
  size="large"
  step={1}
>
  <Input
    append={
      <span
        className="el-number-input-handler"
      >
        <span
          className="fa fa-angle-up el-number-input-up"
          onClick={[Function]}
        />
        <span
          className="fa fa-angle-down el-number-input-down"
          onClick={[Function]}
        />
      </span>
    }
    className="el-number-input"
    max={9007199254740991}
    min={-9007199254740991}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    size="large"
    type="text"
    value=""
  >
    <div
      className="el-input-wrapper el-number-input el-large"
    >
      <div
        className="el-input el-number-input el-large"
      >
        <input
          max={9007199254740991}
          min={-9007199254740991}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <span
        className="el-input-append"
      >
        <span
          className="el-number-input-handler"
        >
          <span
            className="fa fa-angle-up el-number-input-up"
            onClick={[Function]}
          />
          <span
            className="fa fa-angle-down el-number-input-down"
            onClick={[Function]}
          />
        </span>
      </span>
    </div>
  </Input>
</NumberInput>
`;

exports[`NumberInput define size[small] 1`] = `
<NumberInput
  dataFormat={[Function]}
  defaultValue=""
  max={9007199254740991}
  min={-9007199254740991}
  size="small"
  step={1}
>
  <Input
    append={
      <span
        className="el-number-input-handler"
      >
        <span
          className="fa fa-angle-up el-number-input-up"
          onClick={[Function]}
        />
        <span
          className="fa fa-angle-down el-number-input-down"
          onClick={[Function]}
        />
      </span>
    }
    className="el-number-input"
    max={9007199254740991}
    min={-9007199254740991}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    size="small"
    type="text"
    value=""
  >
    <div
      className="el-input-wrapper el-number-input el-small"
    >
      <div
        className="el-input el-number-input el-small"
      >
        <input
          max={9007199254740991}
          min={-9007199254740991}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="text"
          value=""
        />
      </div>
      <span
        className="el-input-append"
      >
        <span
          className="el-number-input-handler"
        >
          <span
            className="fa fa-angle-up el-number-input-up"
            onClick={[Function]}
          />
          <span
            className="fa fa-angle-down el-number-input-down"
            onClick={[Function]}
          />
        </span>
      </span>
    </div>
  </Input>
</NumberInput>
`;
